# automotive-clasfieds-data-collector

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  helper.py  labeling_data.csv  pyproject.toml  tasks.py
.github/workflows/: pipeline.yml
alembic/: env.py
alembic/versions/: 1d20cf487633_first_migration.py  4d38b822a901_add_foreign_keys.py  4d8e2bbc5c90_create_suspicious_offers_table.py  7b36cfdd382d_add_another_labeling_table.py
src/: env.py  evaluate_offers_library.py  main.py  test.py
src/bootstrap/: app.py  logs.py
src/config/: bezwypadkowe_net_config.py  config_main.py  log_init.py  logging_config.json  main_config.py  olx_config.py  otomoto_config.py
src/entrypoints/: create_db.py  evaluate_offer.py  find_intersection.py  generate_models.py  scrape_data.py
src/entrypoints/api/: app.py  main.py
src/entrypoints/api/routes/: operations.py
src/models/: db_schema.py  labeling.py  raw_offer.py
src/raw_offer_producer/: base.py  bezwypadkowe_net.py  olx.py  otomoto.py
src/repositories/: db_schema.py  helpers.py  offers.py
src/repositories/offer/: base.py  sql_alchemy.py
src/services/: data_labeler.py  data_normalizer.py  dataset_generator.py  logistic_regression.py  model_visualization.py  models_generator.py  prepare_dataset.py  suspiciousness_predictor.py  vin_validator.py
src/services/helpers/: data_labeler_by_description.py  data_labeler_by_vin.py  data_normalizer.py
tests/raw_offer_builder/: test_olx_raw_offer_builder.py
tests/raw_offer_producer/: test_olx_raw_offer_producer.py  test_otomoto_raw_offer_producer.py
